src/corelib/io/qprocess_unix.cpp
@@ -3839,7 +3839,11 @@ name|bool
 name|QProcessPrivate
 operator|::
 name|processStarted
-parameter_list|()
+parameter_list|(
+name|QString
+modifier|*
+name|errorMessage
+parameter_list|)
 block|{
 name|ushort
 name|buf
@@ -3926,15 +3930,17 @@ directive|endif
 comment|// did we read an error message?
 if|if
 condition|(
+operator|(
 name|i
 operator|>
 literal|0
+operator|)
+operator|&&
+name|errorMessage
 condition|)
-name|q_func
-argument_list|()
-operator|->
-name|setErrorString
-argument_list|(
+operator|*
+name|errorMessage
+operator|=
 name|QString
 argument_list|(
 operator|(
@@ -3949,7 +3955,6 @@ operator|/
 sizeof|sizeof
 argument_list|(
 name|QChar
-argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
